--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
   <section class="cards">
     <h2 class="sr-only">Explore our Designs</h2>
-    <a class="card" href="#" class="card">
+    <a class="card" href="#">
       <img src="images/patagonia.jpg" alt="a Patagonia painted water bottle" width="500" height="500" loading="lazy">
       <h2>Designs</h2>
       <p>Explore hundreds of designs</p>
