--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </section>
   <main>
     <article class="panel">
-      <div class = "text-wrapper">
+      <div class = "text-wrapper left">
         <h2>Beautiful, Handcrafted Designs</h2>
         <p>Each of our designs is handmade and personally selected. We ensure the highest quality possible and our greatest effort is to make sure that your bottle is specific to you.</p>
         <a class="button" href="">Explore</a>
