--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
 <body>
   <header>
+    <div class="menu-icon">
+      <svg viewbox="0 0 60 60">
+        <line x1="5%" y1="50%" x2="95%" y2="50%" />
+        <line x1="5%" y1="50%" x2="95%" y2="50%" />
+      </svg>
+    </div>
     <nav>
       <ul>
         <li><a>Home</a></li>
@@ -99,6 +105,13 @@
   <footer>
     <p>ReFlask - All Rights Reserved</p>
   </footer>
+  <script>
+    const header = document.querySelector("header");
+
+    document.querySelector(".menu-icon").addEventListener("click", () => {
+    header.classList.toggle("close");
+    });
+  </script>
 </body>
 
 </html>
