--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,12 @@
 <body>
   <!-- TODO: add menu links, delete this comment -->
      <header>
+      <div class="menu-icon">
+        <svg viewbox="0 0 60 60">
+          <line x1="5%" y1="50%" x2="95%" y2="50%" />
+          <line x1="5%" y1="50%" x2="95%" y2="50%" />
+        </svg>
+      </div>
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
@@ -41,6 +47,13 @@
   <main>
     <h1>About</h1>
   </main>
+  <script>
+    const header = document.querySelector("header");
+
+    document.querySelector(".menu-icon").addEventListener("click", () => {
+    header.classList.toggle("close");
+    });
+  </script>
 </body>
 
 </html>
