--- a/contact/index.html
+++ b/contact/index.html
@@ -23,6 +23,12 @@
 
 <body>
   <header>
+    <div class="menu-icon">
+      <svg viewbox="0 0 60 60">
+        <line x1="5%" y1="50%" x2="95%" y2="50%" />
+        <line x1="5%" y1="50%" x2="95%" y2="50%" />
+      </svg>
+    </div>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -33,6 +39,13 @@
   </header>
   <h1>Contact the Crab Himself</h1>
   <img src="../images/contact.svg" alt="Contact info icon">
+  <script>
+    const header = document.querySelector("header");
+
+    document.querySelector(".menu-icon").addEventListener("click", () => {
+    header.classList.toggle("close");
+    });
+  </script>
 </body>
 
 </html>
