hero video problems

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;1,400&family=Montserrat:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
   
-  <title>The Man Behind the Shell</title>
+  <title>About</title>
 </head>
 
 <body>
@@ -38,15 +38,23 @@
         </ul>
       </nav>
     </header>
-  <img srcset="../images/lego-batman-300px.jpg 300w,
-  ../images/lego-batman-600px.jpg 600w,
-  ../images/lego-batman-900px.jpg 900w"
+    <main>
+      <h1>About</h1>
+    </main>
+    <div class="batman">
+      <p>Pretend there's some random stuff about water bottles and stuff here. Otherwise, just enjoy this picture of Lego Batman:</p>
+
+      
+    </div>
+    <div class="batman">
+      <img srcset="../images/lego-batman-300px.jpg 300w,
+    ../images/lego-batman-600px.jpg 600w,
+    ../images/lego-batman-900px.jpg 900w"
      sizes="50vw"
      src="../images/lego-batman-600px.jpg"
      alt="Lego batman walking down a street" width="600" height="400">
-  <main>
-    <h1>About</h1>
-  </main>
+    </div>
+  
   <script>
     const header = document.querySelector("header");
 
