--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
     </nav>
   </header>
   <div class="hero">
-    <picture>
-      <source media="(min-width: 801px)" srcset="images/hero-2000px.jpg">
-      <source media="(min-width: 401px)" srcset="images/hero-800px.jpg">
-      <source media="(max-width: 400px)" srcset="images/hero-400px.jpg">
-      <img src="images/hero-800px.jpg" alt="Four artistically designed water bottles" width="800" height="527">
-    </picture>
-    <div class="hero image title position">
+    <div class="video-background">
+      <div class="video-foreground">
+        <iframe src="https://www.youtube.com/embed/91-CtBx6Gd8?autoplay=1&mute=1&modestbranding=1&playlist=91-CtBx6Gd8&loop=1" allow="autoplay; loop"></iframe>
+      </div>
+    </div>
+      
+    <div class="text-wrapper">
       <h1>ReFlask</h1>
       <p>save a bottle, give a bottle</p>
     </div>
   </div>
+  
   <section class="cards">
     <h2 class="sr-only">Explore our Designs</h2>
     <a class="card" href="#">
@@ -97,11 +98,15 @@
       </div>
     </article>
   </main>
+  <div class="quotetext">
+    <p><strong><b>From your creators:</b></strong></p>
+    <div class="quoteenter">
+      <p><em>"We're here to help make the world a better place!"</em></p>
+    </div>
+  </div>
   <aside>
-    <p>Request a free quote!</p>
+    <a class = "contactbutton" href="contact/index.html">Request Free Quote</a>
   </aside>
-  <strong><b>Whatever you need</b></strong>
-  <em>We're here to help make the world a better place!</em>
   <footer>
     <p>ReFlask - All Rights Reserved</p>
   </footer>
