--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       
     <div class="text-wrapper">
       <h1>ReFlask</h1>
-      <p>save a bottle, give a bottle</p>
+      <!-- <p>save a bottle, give a bottle</p> -->
     </div>
   </div>
   
